<resources>
    <string name="app_name">Machine Learning Learning</string>
    <string name="visual_cluster">Visual Cluster</string>
    <string name="Add_centroid">Add Centroid</string>
    <string name="update">Update</string>
    <string name="reassign">Reassign</string>
    <string name="choose_data">Choose Data</string>
    <string name="restart">Restart</string>
    <string name="graph_description">Area for graphing the visual cluster</string>
    <string-array name="planets_array">
        <item>Linear</item>
        <item>Polynomial</item>
        <item>Radial Basis Function (RBF)</item>
        <item>Sigmoid</item>
    </string-array>
    <string-array name="color_options">
        <item>Blue</item>
        <item>Red</item>
    </string-array>
    <string-array name="svm_options">
        <item>Linear</item>
        <item>Polynomial</item>
        <item>Radial Basis Function</item>
        <item>Sigmoid</item>
    </string-array>
    <string name="nb_prompt">Point Color:</string>
    <string name="tap_screen">Tap screen to add data points</string>
    <string name="reset">Reset</string>
    <string name="kmn_title">K-Means Clustering</string>
    <string name="kmn_description">K-means clustering groups data points into <i>k</i> clusters.
        First, choose your data type. Next, add centroids. Then, reassign the data points and update the
        centroids to see where the mean is for each cluster.</string>
    <string name="svm_title">Support Vector Machine</string>
    <string name="svm_description">Support vector machines (SVMs) are a set of supervised learning
        methods used for classification, regression and outliers detection. Add points to the graph
        and change the kernel type to see how the SVM classifies the data. The gamma parameter defines
        how far the influence of a single training example reaches. The C parameter trades off correct
        classification of training examples against maximization of the decision function’s margin.</string>
    <string name="nb_title">Naive Bayes</string>
    <string name="nb_description">Naive Bayes methods are a set of supervised learning algorithms based
        on applying Bayes’ theorem with the “naive” assumption of conditional independence between every
        pair of features given the value of the class variable. Add points to the graph
        and see how the classifier responds.</string>
    <string name="linreg_title">Linear Regression</string>
    <string name="linreg_description">Linear Regression fits a linear model to minimize the residual
        sum of squares between the observed responses in the dataset, and the responses predicted by
        the linear approximation. Add points to the screen and see how the linear model is calculated.</string>
    <string name="logreg_title">Logistic Regression</string>
    <string name="logreg_description">Logistic Regression fits a logistic model to minimize the residual
        sum of squares between the observed responses in the dataset. Add points to the screen and see how the logistic model is calculated.</string>
    <string name="dt_title">Decision Trees</string>
    <string name="dt_description">Decision Trees (DTs) are a non-parametric supervised learning method
        used for classification and regression. The goal is to create a model that predicts the value
        of a target variable by learning simple decision rules inferred from the data features. Add points
        to the screen to see how they are classified.</string>
    <string name="home_description">Learn about different machine learning algorithms and gain
    an intuitive understanding of how they behave.</string>
</resources>
