<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/nb_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/nb_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nb_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_screen"
        app:layout_constraintBottom_toTopOf="@+id/nb_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nb_view" />

    <LinearLayout
        android:id="@+id/nb_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/nb_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nb_text_view">

        <Button
            android:id="@+id/nb_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <Spinner
            android:id="@+id/nb_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/color_options"
            android:prompt="@string/nb_prompt" />

    </LinearLayout>

    <Button
        android:id="@+id/nb_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About naive bayes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nb_linear_layout" />

</android.support.constraint.ConstraintLayout>
